# ducky

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: build.yml
data/: README.md  spawn_points.json
scripts/spawn_point_extractor/: .gitignore  README.md  bun.lockb  index.ts  package.json
src/: command.rs  config.rs  game.rs  main.rs  packet.rs  random.rs  server.rs  time.rs
src/command/: handler.rs
src/command/handler/: help.rs  rain.rs
src/game/: actor.rs  peer.rs  spawn.rs
src/packet/: decode.rs  encode.rs  handler.rs  util.rs  variant.rs
src/packet/handler/: actor_action.rs  actor_animation_update.rs  actor_request_send.rs  actor_update.rs  handshake.rs  instance_actor.rs  message.rs  new_player_join.rs  request_actors.rs  request_ping.rs
