[package]
name = "ducky"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
steamworks = { git = "https://github.com/tma02/steamworks-rs.git", rev = "4128ec7695abb5333190712c0a9afce7a150e74d" }
toml = "0.8.19"
